--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "request": "^2.72.0"
+  },
+  "devDependencies": {body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "request": "^2.72.0"
+    
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1" ,
     "start": "node index.js"
