--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "express": "^4.13.4",
     "request": "^2.72.0"
   },
-  "devDependencies": {body-parser": "^1.15.0",
+  "devDependencies": {"body-parser": "^1.15.0",
     "express": "^4.13.4",
     "request": "^2.72.0"
     
